mdm-auth/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $CI_PROJECT_NAME
spec:
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: http
  selector:
    app: $CI_PROJECT_NAME
