mdm-auth/deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${CI_PROJECT_NAME}-ingress
spec:
  rules:
    - host: $SERVICE_URL
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $CI_PROJECT_NAME
                port:
                  number: 9090
